# skweak

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  quick_start.ipynb  requirements.txt  setup.py
.github/workflows/: testing.yml
data/: first_names.json  geonames.json  products.json
data/sentiment/lexicons/IBM_Debater/: no_unigram.txt
data/sentiment/lexicons/NRC_Sentiment_Emotion/: NRC-Emotion-Lexicon-Wordlevel-v0.92.txt  no_sent.txt
data/sentiment/lexicons/NRC_VAD_Lexicon/: Norwegian-no-NRC-VAD-Lexicon.txt
data/sentiment/lexicons/socal/: no_adj.txt  no_adv.txt  no_google.txt  no_int.txt  no_noun.txt  no_verb.txt
data/sentiment/norec_sentence/: dev.txt  labels.json  test.txt  train.txt
domains/: Step by step NER.ipynb  conll2003_ner.py  conll2003_prep.py  display_labelling_functions.ipynb  muc6_ner.py  norec_sentiment.py  transformer_model.py  weak_supervision_sentiment.py
domains/ner/: Step by step NER.ipynb  __init__.py  conll2003_ner.py  conll2003_prep.py  data_utils.py  eval_utils.py  muc6_ner.py
domains/sentiment/: Step_by_step.ipynb  norec_sentiment.py  sentiment_lexicons.py  sentiment_models.py  transformer_model.py  weak_supervision_sentiment.py
examples/: quick_start.ipynb
examples/ner/: Step by step NER.ipynb  __init__.py  conll2003_ner.py  conll2003_prep.py  eval_utils.py
examples/sentiment/: Step_by_step.ipynb  __init__.py
skweak/: __init__.py  aggregation.py  analysis.py  base.py  doclevel.py  eval_utils.py  gazetteers.py  generative.py  heuristics.py  sentiment_lexicons.py  sentiment_models.py  spacy.py  spacy_model.py  utils.py  voting.py
skweak/display/: __init__.py  render.py  templates.py
tests/: __init__.py  conftest.py  test_aggregation.py  test_analysis.py  test_doclevel.py  test_gazetteers.py  test_heuristics.py  test_utils.py
